Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjNumObjField.quorum
class main
    Number n
    Boolean bool
    action Main
        n:setValue(7.5)
        bool = cast(Boolean, n)
    end
end